--- a/exercises/practice/binary-search/Cargo.toml
+++ b/exercises/practice/binary-search/Cargo.toml
@@ -4,6 +4,7 @@ name = "binary-search"
 version = "1.3.0"
 
 [dependencies]
+clap = { version = "3.1.6", features = ["derive"] }
 
 [features]
 generic = []
